@@ -33,6 +33,7 @@ K 5694	add "next" methods to HeaderTokenizer to help parsing bad headers
 K 5743	add @MailSessionDefinition and @MailSessionDefinitions for Java EE 7
 K 5769	make cachedContent field protected in MimeMessage and MimeBodyPart
 K 5770	make MimeMultipart fields protected to allow subclassing
+K 5818	need simple way to override MIME type and encoding of attachment
 
 
 		  CHANGES IN THE 1.4.6 RELEASE
